
PROJECT(PAS2C_INTERFACES)

QT_PREPARE(Core -Gui)

INCLUDE(files.cmake)
SET(SRC_FILES ${_SRC_FILES})
SET(HDR_FILES ${_HDR_FILES})

INCLUDE_DIRECTORIES(
    ${PAS2C_CORE_UTILS_SOURCE_DIR}
)

ADD_QT_LIBRARY(
    pascInterfaces ${LIB_SCOPE}

    ${SRC_FILES}
    ${HDR_FILES}
)

TARGET_LINK_LIBRARIES(
    pascInterfaces

    LINK_PRIVATE
        pascCoreUtils
)
